[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Sprites/characters/blob.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mobs/Blob.gd" type="Script" id=2]
[ext_resource path="res://Resources/Sprites/characters/dedblob.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.10993, 3.52762 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.57441, 3.76576 )

[node name="Blob" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
hp = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.242981, 4.50198 )
shape = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6.656, -0.675 )
enabled = true
cast_to = Vector2( 0, 8.873 )
collision_mask = 2

[node name="Timer" type="Timer" parent="."]

[node name="BodyDetector" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyDetector"]
position = Vector2( 0.185514, 4.24299 )
shape = SubResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="BodyDetector" to="." method="_on_BodyDetector_body_entered"]
